--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT =8080
 NODE_MODE  = development
-MONGO_URL = mongodb+srv://root:rootkiroot@cluster1.kee77zz.mongodb.net/doctorapp
-JWT_SECRET=XYZ1234
+MONGO_URL = example
+JWT_SECRET= your string 
